--- a/project.config.json
+++ b/project.config.json
@@ -50,7 +50,7 @@
     },
     "compileType": "miniprogram",
     "libVersion": "2.19.4",
-    "appid": "wxd6f117ad5622fa22",
+    "appid": "wxc3b8f4726c97cfe4",
     "projectname": "ChatRoom",
     "cloudfunctionTemplateRoot": "cloudfunctionTemplate/",
     "condition": {},
