--- a/project.config.json
+++ b/project.config.json
@@ -46,7 +46,7 @@
   "projectname": "TodoList",
   "miniprogramRoot": "miniprogram/",
   "cloudfunctionRoot": "cloudfunctions/",
-  "cloudfunctionTemplateRoot": "",
+  "cloudfunctionTemplateRoot": "cloudfunctionTemplate/",
   "condition": {},
   "srcMiniprogramRoot": "miniprogram/",
   "editorSetting": {
