--- a/project.private.config.json
+++ b/project.private.config.json
@@ -9,6 +9,13 @@
       "list": [
         {
           "name": "",
+          "pathName": "pages/book/book",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
+        },
+        {
+          "name": "",
           "pathName": "pages/login/login",
           "query": "",
           "launchMode": "default",
