--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -18,7 +18,7 @@
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
-    "navigationBarTitleText": "云开发待办",
+    "navigationBarTitleText": "二手书商城",
     "navigationBarTextStyle": "black"
   },
   "sitemapLocation": "sitemap.json",
